add jest, supertest, cria endpoint para login
