# src/usecase/dto/input/login-user-input.dto.ts
@@ -1,0 +1,5 @@
+export interface LoginUserInputDTO {
+  email: string;
+  password: string;
+  correlationId: string;
+}
